# fastapi_bazel_demo

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  main.py  requirements_lock.txt
