# BUILD.bazel (in your app directory)
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    src = "//third_party:requirements.txt",  # 输入文件，列出顶层依赖
    requirements_txt = "requirements_lock.txt",  # 输出文件，锁定所有依赖版本
)
#
#py_binary(
#    name = "fastapi_app",
#    srcs = ["main.py"],
#    deps = [
#        #        "@pypi//:fastapi",
#        #        "@pypi//:uvicorn",
#        # Add any other internal Python library dependencies here
#    ],
#)
